--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-contacts": "^7.0.5",
+    "react-native-flash-message": "^0.4.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.20.0",
