--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "android:staging": "react-native run-android --variant=stagingdebug --appIdSuffix 'stage'",
+    "android:dev": "react-native run-android --variant=developmentdebug --appIdSuffix 'dev'"
   },
   "dependencies": {
     "@react-native-material/core": "^1.3.7",
@@ -17,6 +19,7 @@
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-callkeep": "^4.3.8",
     "react-native-contacts": "^7.0.5",
     "react-native-flash-message": "^0.4.0",
     "react-native-safe-area-context": "^4.5.0",
