--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
+    "dayjs": "^1.11.7",
     "deprecated-react-native-prop-types": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-camera": "^4.2.1",
+    "react-native-collapsible": "^1.6.1",
     "react-native-contacts": "^7.0.5",
-    "react-native-flash-message": "^0.4.0",
+    "react-native-flash-message": "^0.4.1",
     "react-native-image-crop-picker": "^0.39.0",
+    "react-native-modal": "^13.0.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "^4.5.0",
@@ -31,7 +34,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0",
-    "realm": "^11.6.0"
+    "realm": "^11.6.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
