--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -168,8 +168,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.facebook.fresco:fresco:2.6.0'
 implementation 'com.facebook.fresco:animated-gif:2.6.0'
+    implementation 'com.android.volley:volley:1.2.1'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
-    
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
     }
