--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios ",
     "lint": "eslint .",
-    "start": "react-native start  --reset-cache",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.4",
+    "react-native-autocomplete-dropdown": "^2.1.1",
     "react-native-contacts": "^7.0.5",
     "react-native-flash-message": "^0.4.1",
     "react-native-mmkv": "^2.8.0",
